--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Array-Find
 
 0.07    2012-08-02 (SHARYANTO)
 
-        No functional changes. Replace Sub::Spec with Rinci.
+        - No functional changes. Replace Sub::Spec with Rinci.
 
 
 0.06    2011-09-15 (SHARYANTO)
@@ -16,25 +16,25 @@ Revision history for Array-Find
 
         [INCOMPATIBLE CHANGES]
 
-        Now only return result instead of [status, errmsg, result].
+        - Now only return result instead of [status, errmsg, result].
 
 
 0.04    2011-02-21 (SHARYANTO)
 
-        Remove debugging statement, require newer version of Test::More.
+        - Remove debugging statement, require newer version of Test::More.
 
 
 0.03    2011-02-19 (SHARYANTO)
 
-        Fix a couple of bugs in infix and suffix matching.
+        - Fix a couple of bugs in infix and suffix matching.
 
 
 0.02    2011-02-19 (SHARYANTO)
 
-        All modes 'prefix', 'infix', 'suffix' can be or-combined (e.g.
-        'prefix|infix', 'prefix|infix|suffix').
+        - All modes 'prefix', 'infix', 'suffix' can be or-combined (e.g.
+          'prefix|infix', 'prefix|infix|suffix').
 
 
 0.01    2011-02-18 (SHARYANTO)
 
-        First release.
+        - First release.
