--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Array-Find
 
+0.08    2015-09-03 (PERLANCAR)
+
+	- No functional changes.
+
+	- Update Rinci metadata to v1.1.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 0.07    2012-08-02 (SHARYANTO)
 
         - No functional changes. Replace Sub::Spec with Rinci.
