[dist] Update release note style in Changes

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.08    2015-09-03 (PERLANCAR)
+0.08    2015-09-03  Released-By: PERLANCAR
 
 	- No functional changes.
 
@@ -9,41 +9,41 @@
 	  requirement.
 
 
-0.07    2012-08-02 (SHARYANTO)
+0.07    2012-08-02  Released-By: SHARYANTO
 
         - No functional changes. Replace Sub::Spec with Rinci.
 
 
-0.06    2011-09-15 (SHARYANTO)
+0.06    2011-09-15  Released-By: SHARYANTO
 
         [ENHANCEMENTS]
 
         - Add 'unique' option.
 
 
-0.05    2011-03-08 (SHARYANTO)
+0.05    2011-03-08  Released-By: SHARYANTO
 
         [INCOMPATIBLE CHANGES]
 
         - Now only return result instead of [status, errmsg, result].
 
 
-0.04    2011-02-21 (SHARYANTO)
+0.04    2011-02-21  Released-By: SHARYANTO
 
         - Remove debugging statement, require newer version of Test::More.
 
 
-0.03    2011-02-19 (SHARYANTO)
+0.03    2011-02-19  Released-By: SHARYANTO
 
         - Fix a couple of bugs in infix and suffix matching.
 
 
-0.02    2011-02-19 (SHARYANTO)
+0.02    2011-02-19  Released-By: SHARYANTO
 
         - All modes 'prefix', 'infix', 'suffix' can be or-combined (e.g.
           'prefix|infix', 'prefix|infix|suffix').
 
 
-0.01    2011-02-18 (SHARYANTO)
+0.01    2011-02-18  Released-By: SHARYANTO
 
         - First release.
